--- a/control_trimestres.html
+++ b/control_trimestres.html
@@ -1,253 +1,4 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Control de Trimestres — Centro Educativo Integral Camino a Casa</title>
-
-  <style>
-    body {
-      font-family:"Segoe UI", Arial;
-      background:#f0f5f3;
-      margin:0;
-      padding:0;
-      text-align:center;
-    }
-
-    header{
-      background:#25619c;
-      color:#fff;
-      padding:18px;
-      box-shadow:0 3px 8px rgba(0,0,0,0.15);
-    }
-
-    .logo {
-      width: 70px;
-      margin-bottom: 6px;
-    }
-
-    main{
-      max-width:900px;
-      margin:20px auto;
-      background:#ffffff;
-      padding:20px;
-      border-radius:12px;
-      box-shadow:0 4px 12px rgba(0,0,0,0.10);
-      text-align:left;
-    }
-
-    .fila { margin-bottom:14px; }
-
-    label {
-      font-weight:600;
-      margin-right:8px;
-      color:#23422f;
-    }
-
-    input, select{
-      padding:8px;
-      border-radius:6px;
-      border:1px solid #ccc;
-      font-family:inherit;
-    }
-
-    .btn{
-      padding:10px 16px;
-      border-radius:8px;
-      border:none;
-      color:#fff;
-      cursor:pointer;
-      font-weight:600;
-      margin-right:6px;
-      transition:.15s ease;
-    }
-
-    .btn:hover{
-      transform: translateY(-2px);
-      box-shadow:0 4px 10px rgba(0,0,0,0.15);
-    }
-
-    .guardar{ background:#2f8c4a; }
-    .historial{ background:#25619c; }
-    .salir{ background:#c0392b; }
-
-    .mensaje{
-      background:#d4edda;
-      border:1px solid #c3e6cb;
-      color:#155724;
-      padding:10px;
-      border-radius:8px;
-      display:none;
-      margin-top:14px;
-      text-align:center;
-      font-weight:600;
-    }
-
-    /* Panel de información */
-    .panel-estado{
-      margin-top:20px;
-      padding:16px;
-      border-radius:10px;
-      background:#f7f9fb;
-      border:1px solid #dde5f0;
-      color:#23422f;
-    }
-
-    .estado-activo{
-      color:#2f8c4a;
-      font-weight:700;
-    }
-    .estado-inactivo{
-      color:#c0392b;
-      font-weight:700;
-    }
-  </style>
-</head>
-
-<body>
-
-  <header>
-    <img src="logo2025.jpg" class="logo">
-    <h1 style="margin:0;">🔧 Control de Trimestres</h1>
-  </header>
-
-  <main>
-
-    <!-- Selección de trimestre -->
-    <div class="fila">
-      <label>Nombre del Trimestre:</label>
-      <select id="nombreTrimestre">
-        <option value="1er Trimestre">1er Trimestre</option>
-        <option value="2do Trimestre">2do Trimestre</option>
-        <option value="3er Trimestre">3er Trimestre</option>
-      </select>
-    </div>
-
-    <div class="fila">
-      <label>Inicio:</label>
-      <input type="date" id="fechaInicio" />
-
-      <label style="margin-left:8px">Fin:</label>
-      <input type="date" id="fechaFin" />
-    </div>
-
-    <div class="fila">
-      <label>
-        <input type="checkbox" id="activo" /> Trimestre activo
-      </label>
-    </div>
-
-    <!-- Botones -->
-    <div class="fila">
-      <button class="btn guardar" id="guardarBtn">Guardar</button>
-      <button class="btn historial" id="historialBtn">Historial</button>
-      <button class="btn salir" id="salirBtn">Salir</button>
-    </div>
-
-    <!-- Panel de resumen -->
-    <div id="panelTrimestre" class="panel-estado">
-      <strong>Trimestre configurado:</strong> aún no hay información guardada.
-    </div>
-
-    <!-- Mensaje -->
-    <div id="mensaje" class="mensaje">✅ Guardado correctamente</div>
-
-  </main>
-
-  <!-- Firebase -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-    import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDqty2eG_5VEi5NtU_HQzfZU_6FruMh66Q",
-      authDomain: "camino-a-casa-87d65.firebaseapp.com",
-      databaseURL: "https://camino-a-casa-87d65-default-rtdb.firebaseio.com",
-      projectId: "camino-a-casa-87d65",
-      storageBucket: "camino-a-casa-87d65.firebasestorage.app",
-      messagingSenderId: "725645453280",
-      appId: "1:725645453280:web:4cc41935020d1ae290ed85"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    const nombreTrimestre = document.getElementById("nombreTrimestre");
-    const fechaInicio = document.getElementById("fechaInicio");
-    const fechaFin = document.getElementById("fechaFin");
-    const activo = document.getElementById("activo");
-
-    const guardarBtn = document.getElementById("guardarBtn");
-    const historialBtn = document.getElementById("historialBtn");
-    const salirBtn = document.getElementById("salirBtn");
-
-    const mensaje = document.getElementById("mensaje");
-    const panelTrimestre = document.getElementById("panelTrimestre");
-
-    function actualizarPanel(tri) {
-      if (!tri || !tri.nombre) {
-        panelTrimestre.innerHTML = "<strong>Trimestre configurado:</strong> aún no hay información guardada.";
-        return;
-      }
-
-      const estadoClass = tri.activo ? "estado-activo" : "estado-inactivo";
-      const estadoTexto = tri.activo ? "ACTIVO" : "INACTIVO";
-
-      panelTrimestre.innerHTML = `
-        <div><strong>Trimestre:</strong> ${tri.nombre}</div>
-        <div><strong>Periodo:</strong> ${tri.inicio} al ${tri.fin}</div>
-        <div class="${estadoClass}"><strong>Estado:</strong> ${estadoTexto}</div>
-      `;
-    }
-
-    // Cargar
-    (async function cargar() {
-      try {
-        const snap = await get(ref(db, "configuracion/trimestreActivo"));
-        if (snap.exists()) {
-          const t = snap.val();
-          nombreTrimestre.value = t.nombre;
-          fechaInicio.value = t.inicio;
-          fechaFin.value = t.fin;
-          activo.checked = t.activo;
-          actualizarPanel(t);
-        }
-      } catch(e){
-        console.error(e);
-      }
-    })();
-
-    // Guardar
-    guardarBtn.addEventListener("click", async () => {
-      const nombre = nombreTrimestre.value;
-      const inicio = fechaInicio.value;
-      const fin = fechaFin.value;
-      const act = activo.checked;
-
-      if (!inicio || !fin) return alert("Complete inicio y fin.");
-      if (new Date(inicio) > new Date(fin)) return alert("La fecha de inicio debe ser anterior a la fecha fin.");
-
-      const datos = { nombre, inicio, fin, activo: act };
-
-      try {
-        await set(ref(db, "configuracion/trimestreActivo"), datos);
-        actualizarPanel(datos);
-        mensaje.style.display = "block";
-        setTimeout(()=> mensaje.style.display="none", 2800);
-      } catch(err){
-        console.error(err);
-        alert("Error al guardar.");
-      }
-    });
-
-    historialBtn.addEventListener("click", () => {
-      window.location.href = "historial.html";
-    });
-
-    salirBtn.addEventListener("click", () => {
-      window.location.href = "index.html";
-    });
-  </script>
-
-</body>
+Control Trimestres HTML content placeholder
 </html>
