--- a/historial.html
+++ b/historial.html
@@ -1,404 +1,4 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Historial de Calificaciones — Centro Educativo Integral Camino a Casa</title>
-
-  <style>
-    body {
-      font-family:"Segoe UI", Arial;
-      background:#eef5f1;
-      margin:0;
-      padding:0;
-      text-align:center;
-    }
-
-    header{
-      background:#25619c;
-      color:#fff;
-      padding:18px;
-      box-shadow:0 3px 8px rgba(0,0,0,0.15);
-    }
-
-    .logo {
-      width: 70px;
-      margin-bottom: 6px;
-    }
-
-    .top-buttons {
-      margin-top: 12px;
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-    }
-
-    .btn-top {
-      border:none;
-      padding:10px 16px;
-      border-radius:8px;
-      cursor:pointer;
-      color:#fff;
-      font-weight:600;
-      transition:.15s ease;
-    }
-
-    .btn-volver { background:#2f8c4a; }
-    .btn-salir  { background:#c0392b; }
-
-    .btn-top:hover {
-      transform:translateY(-2px);
-      box-shadow:0 4px 10px rgba(0,0,0,0.15);
-    }
-
-    .contenedor-tablas {
-      display:flex;
-      flex-direction:column;
-      gap:26px;
-      margin:22px auto;
-      align-items:center;
-      width: 94%;
-    }
-
-    .tabla-contenedor {
-      width:100%;
-      background:#fff;
-      border-radius:12px;
-      padding:14px;
-      box-shadow:0 4px 12px rgba(0,0,0,0.10);
-      border-top: 4px solid #25619c;
-      position:relative;
-    }
-
-    table {
-      width:100%;
-      border-collapse:collapse;
-      margin-top:10px;
-      background:white;
-    }
-
-    th,td {
-      border:1px solid #ddd;
-      padding:8px;
-      text-align:center;
-    }
-
-    th {
-      background:#25619c;
-      color:#fff;
-    }
-
-    .acciones {
-      position:absolute;
-      top:14px;
-      right:14px;
-      display:flex;
-      gap:8px;
-    }
-
-    button.pdf  { background:#25619c; }
-    button.excel{ background:#2f8c4a; }
-    button.eliminar { background:#c0392b; }
-
-    button {
-      border:none;
-      padding:8px 10px;
-      border-radius:8px;
-      cursor:pointer;
-      color:#fff;
-      transition:.15s ease;
-    }
-
-    button:hover {
-      transform:translateY(-2px);
-      box-shadow:0 4px 10px rgba(0,0,0,0.15);
-    }
-
-    .mensaje{
-      display:none;
-      background:#d4edda;
-      color:#155724;
-      padding:10px;
-      margin:8px auto;
-      border-radius:8px;
-      width:80%;
-      font-weight:600;
-    }
-
-    .promedios{
-      margin-top:12px;
-      font-weight:700;
-      color:#23422f;
-    }
-  </style>
-</head>
-
-<body>
-
-  <header>
-    <img src="logo2025.jpg" class="logo">
-    <h1 style="margin:0;">📘 Historial de Calificaciones</h1>
-    <small style="font-size:0.9rem; color:#dfeaf6;">Centro Educativo Integral Camino a Casa</small>
-  </header>
-
-  <!-- Botones superiores -->
-  <div class="top-buttons">
-    <button id="btnVolver" class="btn-top btn-volver">⬅ Regresar</button>
-    <button id="btnSalir" class="btn-top btn-salir">Salir</button>
-  </div>
-
-  <div id="mensajeConfirmacion" class="mensaje">✅ Grupo eliminado del historial correctamente</div>
-
-  <div class="contenedor-tablas" id="contenedorTablas"></div>
-
-  <!-- Librerías -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-
-  <!-- Firebase -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-    import { getDatabase, ref, get, remove } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDqty2eG_5VEi5NtU_HQzfZU_6FruMh66Q",
-      authDomain: "camino-a-casa-87d65.firebaseapp.com",
-      databaseURL: "https://camino-a-casa-87d65-default-rtdb.firebaseio.com",
-      projectId: "camino-a-casa-87d65",
-      storageBucket: "camino-a-casa-87d65.firebasestorage.app",
-      messagingSenderId: "725645453280",
-      appId: "1:725645453280:web:4cc41935020d1ae290ed85"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    document.getElementById("btnVolver").onclick = () => window.location.href = "control_trimestres.html";
-    document.getElementById("btnSalir").onclick  = () => window.location.href = "index.html";
-
-    const contenedor = document.getElementById("contenedorTablas");
-    const mensajeConfirmacion = document.getElementById("mensajeConfirmacion");
-
-    // Cargar historial
-    async function cargarHistorial() {
-      contenedor.innerHTML = "";
-      const snap = await get(ref(db, "calificaciones"));
-      if (!snap.exists()) {
-        contenedor.innerHTML = "<p>No hay calificaciones registradas.</p>";
-        return;
-      }
-
-      const datos = snap.val();
-
-      for (const trimestreKey of Object.keys(datos)) {
-        const gruposObj = datos[trimestreKey];
-        for (const grupoKey of Object.keys(gruposObj)) {
-          const materiasObj = gruposObj[grupoKey];
-          const materias = Object.keys(materiasObj || {});
-          if (materias.length === 0) continue;
-
-          // lista de alumnos
-          const alumnosSet = new Set();
-          materias.forEach(m => {
-            const entrada = materiasObj[m];
-            (entrada.datos || []).forEach(d => alumnosSet.add(d.alumno));
-          });
-
-          const alumnos = Array.from(alumnosSet).sort((a,b)=> a.localeCompare(b,'es'));
-
-          const contDiv = document.createElement("div");
-          contDiv.className = "tabla-contenedor";
-
-          const header = document.createElement("h3");
-          header.textContent = `Grupo ${grupoKey} — ${trimestreKey}`;
-          header.style.margin="0";
-
-          const accionesDiv = document.createElement("div");
-          accionesDiv.className="acciones";
-
-          // Botones: PDF, Excel, Eliminar
-          const btnPDF = document.createElement("button");
-          btnPDF.className="pdf";
-          btnPDF.textContent="📄";
-          btnPDF.title="Exportar PDF";
-          btnPDF.onclick = () => exportarPDF(grupoKey, trimestreKey, materiasObj);
-
-          const btnExcel = document.createElement("button");
-          btnExcel.className="excel";
-          btnExcel.textContent="📊";
-          btnExcel.title="Exportar Excel";
-          btnExcel.onclick = () => exportarExcel(grupoKey, trimestreKey, materiasObj);
-
-          const btnEliminar = document.createElement("button");
-          btnEliminar.className="eliminar";
-          btnEliminar.textContent="🗑️";
-          btnEliminar.onclick = () => eliminarTabla(trimestreKey, grupoKey, contDiv);
-
-          accionesDiv.append(btnPDF, btnExcel, btnEliminar);
-
-          // Tabla
-          const tabla = document.createElement("table");
-          const thead = document.createElement("thead");
-          const headRow = document.createElement("tr");
-          headRow.innerHTML = "<th>Alumno</th>" + materias.map(m=>`<th>${m}</th>`).join("");
-          thead.appendChild(headRow);
-
-          const tbody = document.createElement("tbody");
-          alumnos.forEach(alumno => {
-            const tr = document.createElement("tr");
-            let inner = `<td>${alumno}</td>`;
-            materias.forEach(m => {
-              const entrada = materiasObj[m];
-              const encontrado = (entrada.datos || []).find(d => d.alumno === alumno);
-              inner += `<td>${encontrado ? encontrado.calificacion : "-"}</td>`;
-            });
-            tr.innerHTML = inner;
-            tbody.appendChild(tr);
-          });
-
-          tabla.appendChild(thead);
-          tabla.appendChild(tbody);
-
-          // Promedios
-          const promediosDiv = document.createElement("div");
-          promediosDiv.className="promedios";
-
-          let texto = "<b>Promedio por Materia:</b> ";
-          let sumaTotal=0, contTotal=0;
-
-          materias.forEach((m)=> {
-            const entrada = materiasObj[m];
-            let s=0, c=0;
-            (entrada.datos || []).forEach(d => {
-              if (!isNaN(d.calificacion)) { s += Number(d.calificacion); c++; }
-            });
-            const prom = c>0 ? (s/c).toFixed(1) : "-";
-            texto += `${m}: ${prom}  `;
-            if (c>0) { sumaTotal += s; contTotal += c; }
-          });
-
-          const promGrupal = contTotal>0 ? (sumaTotal/contTotal).toFixed(1) : "-";
-          texto += ` | <b>Promedio Grupal:</b> ${promGrupal}`;
-
-          promediosDiv.innerHTML = texto;
-
-          contDiv.append(header, accionesDiv, tabla, promediosDiv);
-          contenedor.appendChild(contDiv);
-        }
-      }
-    }
-
-    // Eliminar grupo
-    async function eliminarTabla(trimestreKey, grupoKey, contDiv) {
-      if (!confirm("¿Eliminar esta tabla completa del historial?")) return;
-
-      await remove(ref(db, `calificaciones/${encodeKey(trimestreKey)}/${encodeKey(grupoKey)}`));
-
-      contDiv.remove();
-      mensajeConfirmacion.style.display="block";
-      setTimeout(()=> mensajeConfirmacion.style.display="none", 2000);
-    }
-
-    function encodeKey(s){ return s.replace(/\./g,"_"); }
-
-    // Excel
-    function exportarExcel(grupo, trimestre, materiasObj) {
-      const table = document.createElement("table");
-
-      const caption = document.createElement("caption");
-      caption.textContent = "Centro Educativo Integral Camino a Casa";
-      caption.style.fontWeight="bold";
-      caption.style.marginBottom="8px";
-      table.appendChild(caption);
-
-      const materias = Object.keys(materiasObj);
-
-      const thead = document.createElement("thead");
-      const trh = document.createElement("tr");
-      trh.innerHTML = "<th>Alumno</th>" + materias.map(m=>`<th>${m}</th>`).join("");
-      thead.appendChild(trh);
-      table.appendChild(thead);
-
-      const tbody = document.createElement("tbody");
-      const alumnosSet = new Set();
-      materias.forEach(m => (materiasObj[m].datos || []).forEach(d=> alumnosSet.add(d.alumno)));
-
-      const alumnos = Array.from(alumnosSet).sort((a,b)=> a.localeCompare(b,'es'));
-
-      alumnos.forEach(alumno=>{
-        const tr = document.createElement("tr");
-        let inner = `<td>${alumno}</td>`;
-        materias.forEach(m=>{
-          const entrada = materiasObj[m];
-          const encontrado = (entrada.datos||[]).find(d=>d.alumno===alumno);
-          inner += `<td>${encontrado? encontrado.calificacion:""}</td>`;
-        });
-        tr.innerHTML = inner;
-        tbody.appendChild(tr);
-      });
-
-      table.appendChild(tbody);
-
-      const wb = XLSX.utils.table_to_book(table, {sheet:"Calificaciones"});
-      XLSX.writeFile(wb, `Calificaciones_${grupo}_${trimestre}.xlsx`);
-    }
-
-    // PDF
-    async function exportarPDF(grupo, trimestre, materiasObj) {
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF({orientation:"landscape"});
-
-      // LOGO
-      try {
-        const img = new Image();
-        img.src = "logo2025.jpg";
-        await img.decode();
-        doc.addImage(img, "JPEG", 10, 6, 30, 30);
-      } catch(e) {
-        console.warn("Logo no cargado en PDF", e);
-      }
-
-      doc.setFontSize(16);
-      doc.setTextColor(43,130,198);
-      doc.text("Centro Educativo Integral Camino a Casa", 150, 14, {align:"center"});
-
-      doc.setFontSize(13);
-      doc.text(`Historial de Calificaciones — Grupo ${grupo} — ${trimestre}`, 150, 26, {align:"center"});
-
-      // tabla
-      const materias = Object.keys(materiasObj);
-      const headers = ["Alumno", ...materias];
-      const rows = [];
-
-      const alumnosSet = new Set();
-      materias.forEach(m => (materiasObj[m].datos || []).forEach(d=> alumnosSet.add(d.alumno)));
-      const alumnos = Array.from(alumnosSet).sort((a,b)=> a.localeCompare(b,'es'));
-
-      alumnos.forEach(a=>{
-        const row=[a];
-        materias.forEach(m=>{
-          const ent = materiasObj[m];
-          const encontrado = (ent.datos||[]).find(d=>d.alumno===a);
-          row.push(encontrado? String(encontrado.calificacion):"-");
-        });
-        rows.push(row);
-      });
-
-      doc.autoTable({
-        startY: 38,
-        head: [headers],
-        body: rows,
-        theme: "striped",
-        headStyles: { fillColor: [37,97,156], textColor:255 },
-        styles: { halign:"center", fontSize:9 }
-      });
-
-      doc.save(`Calificaciones_${grupo}_${trimestre}.pdf`);
-    }
-
-    cargarHistorial();
-  </script>
-
-</body>
+Historial HTML content placeholder
 </html>
