--- a/historial.html
+++ b/historial.html
@@ -144,6 +144,13 @@
   <!-- Botones superiores -->
   <div class="top-buttons">
     <button id="btnVolver" class="btn-top btn-volver">⬅ Regresar</button>
+<button id="btnInternas" class="btn imprimir">🖨 Imprimir Calificaciones Internas</button>
+
+<script>
+  document.getElementById("btnInternas").addEventListener("click",()=>{
+    window.location.href = "internas.html";
+  });
+</script>
     <button id="btnSalir" class="btn-top btn-salir">Salir</button>
   </div>
 
